2011-07-23  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/unix/sysv/linux/bits/socket.h (PF_NFC): Define.
	(AF_NFC): Define.
	* sysdeps/unix/sysv/linux/sparc/bits/socket.h (PF_NFC): Define.
	(AF_NFC): Define.

	* sysdeps/unix/sysv/linux/sys/ptrace.h: Add new constants.
	* sysdeps/unix/sysv/linux/sparc/sys/ptrace.h: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/sys/ptrace.h: Likewise.
	* sysdeps/unix/sysv/linux/ia64/sys/ptrace.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/sys/ptrace.h: Likewise.

	[BZ #13021]
	* scripts/test-installation.pl: Don't expect libnss_test1 to be
	installed.

	* sysdeps/x86_64/dl-trampoline.S (_dl_runtime_profile): Fix one more
	typo.
	(_dl_x86_64_save_sse): Likewise.

2011-07-22  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/x86_64/dl-trampoline.S (_dl_runtime_profile): Fix test for
	OSXSAVE.
	(_dl_x86_64_save_sse): Likewise.

	* crypt/crypt_util.c (__init_des_r): Optimize memset calls.

	* crypt/crypt_util.c (__init_des_r): Add read barrier as well.

2011-07-21  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/x86_64/dl-trampoline.S (_dl_runtime_profile): Fix last
	change.
	(_dl_x86_64_save_sse): Use correct AVX check.

2011-07-21  Liubov Dmitrieva  <liubov.dmitrieva@gmail.com>

	* sysdeps/x86_64/multiarch/strcpy-sse2-unaligned.S: Fix overfow
	bug in strncpy/strncat.
	* sysdeps/x86_64/multiarch/strcpy-ssse3.S: Likewise.

2011-07-21  Ulrich Drepper  <drepper@gmail.com>

	* string/tester.c (test_strcat): Add tests for different alignments
	of source and destination.
	(test_strncat): Likewise.

2011-07-20  Ulrich Drepper  <drepper@gmail.com>

	[BZ #12852]
	* posix/glob.c (glob): Check passed in values before using them in
	expressions to avoid some overflows.
	(glob_in_dir): Likewise.

	[BZ #13007]
	* sysdeps/x86_64/dl-trampoline.S (_dl_runtime_profile): More complete
	check for AVX enablement so that we don't crash with old kernels and
	new hardware.
	* elf/tst-audit4.c: Add same checks here.
	* elf/tst-audit6.c: Likewise.
