@@ -118,7 +118,7 @@ typedef _G_fpos64_t fpos64_t;
 #endif
 
 /* The possibilities for the third argument to `setvbuf'.  */
-#define _IOFBF 0 		/* Fully buffered.  */
+#define _IOFBF 0		/* Fully buffered.  */
 #define _IOLBF 1		/* Line buffered.  */
 #define _IONBF 2		/* No buffering.  */
 
@@ -141,6 +141,10 @@ typedef _G_fpos64_t fpos64_t;
 #define SEEK_SET	0	/* Seek from beginning of file.  */
 #define SEEK_CUR	1	/* Seek from current position.  */
 #define SEEK_END	2	/* Seek from end of file.  */
+#ifdef __USE_GNU
+# define SEEK_DATA	3	/* Seek to next data.  */
+# define SEEK_HOLE	4	/* Seek to next hole.  */
+#endif
 
 
 #if defined __USE_SVID || defined __USE_XOPEN
@@ -152,7 +156,7 @@ typedef _G_fpos64_t fpos64_t;
 /* Get the values:
    L_tmpnam	How long an array of chars must be to be passed to `tmpnam'.
    TMP_MAX	The minimum number of unique filenames generated by tmpnam
-   		(and tempnam when it uses tmpnam's name space),
+		(and tempnam when it uses tmpnam's name space),
 		or tempnam (the two are separate).
    L_ctermid	How long an array to pass to `ctermid'.
    L_cuserid	How long an array to pass to `cuserid'.
