@@ -1,5 +1,8 @@
 2011-07-23  Ulrich Drepper  <drepper@gmail.com>
 
+	* posix/unistd.h: Define SEEK_DATA and SEEK_HOLE.
+	* libio/stido.h: Likewise.
+
 	* sysdeps/unix/sysv/linux/bits/socket.h (PF_NFC): Define.
 	(AF_NFC): Define.
 	* sysdeps/unix/sysv/linux/sparc/bits/socket.h (PF_NFC): Define.
